--- a/_header.scss
+++ b/_header.scss
@@ -352,7 +352,7 @@ a {
           @media only screen and (max-width: 510px) {
         width:1.2rem;
         height:1.2rem;
-        margin:-2rem;
+        
     }
 
         &:nth-child(1) {
